--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,6 @@
     background-color: #04BF9429;
     border-radius: 16px;
     padding: 56px;
-    margin-top: 71px;
 }
 
 .header {
@@ -28,7 +27,7 @@
         letter-spacing: 0;
         text-align: left;
         margin-bottom: 16px;
-        color: #1E90FF;
+        color: #242424;
     }
 
     &__weather__mobile {
@@ -57,6 +56,10 @@
 
 @media (max-width: 375px) {
     .header__img {
+        display: none;
+    }
+
+    .switch {
         display: none;
     }
 
@@ -109,3 +112,41 @@
         }
     }
 }
+
+.switch {
+    display: flex;
+    margin-bottom: 48px;
+
+    &__item {
+        position: relative;
+        cursor: pointer;
+        font-family: Poppins, sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 18px;
+        letter-spacing: 0;
+        text-align: left;
+        color: #91A0B6;
+        margin-right: 40px;
+
+        &:after {
+            content: '-';
+            position: absolute;
+            top: 3px;
+            transform: rotate(-45deg);
+            transform-origin: top right;
+            height: 10px;
+        }
+        &:before {
+            content: '-';
+            position: absolute;
+            right: -21px;
+            top: 5px;
+            transform: rotate(45deg);
+            transform-origin: top right;
+            height: 10px;
+        }
+    }
+}
+
